# lbu

./: CMakeLists.txt  README.md  lbu-config.cmake.in
alsa/: alsa.cpp
alsa/lbu/alsa/: alsa.h
core/: abstract_stream.cpp  align.cpp  array_ref.cpp  ascii.cpp  bit_ops.cpp  buffer_stream.cpp  byte_buffer.cpp  byte_buffer_stream.cpp  c_function.cpp  core.cpp  dynamic_memory.cpp  endian.cpp  eventfd.cpp  fd.cpp  fd_stream.cpp  file.cpp  io.cpp  lbu_global.h.cmake  math.cpp  memory.cpp  pipe.cpp  poll.cpp  ring_spsc.cpp  ring_spsc_stream.cpp  time.cpp  triple_buffer_spsc.cpp  unexpected.cpp  xmalloc.cpp
core/lbu/: abstract_stream.h  align.h  array_ref.h  ascii.h  bit_ops.h  buffer_stream.h  byte_buffer.h  byte_buffer_stream.h  c_function.h  dynamic_memory.h  endian.h  eventfd.h  fd.h  fd_stream.h  file.h  io.h  math.h  memory.h  pipe.h  poll.h  ring_spsc.h  ring_spsc_stream.h  time.h  triple_buffer_spsc.h  unexpected.h  xmalloc.h
tests/: CMakeLists.txt
tests/auto/: test_byte_buffer.cpp
tests/bench/: bench_stream.cpp
